fixed nav bar issue with bleeding

--- a/client/src/App.css
+++ b/client/src/App.css
@@ -7,6 +7,10 @@
   pointer-events: none;
 }
 
+.background {
+  background-color: black;
+}
+
 @media (prefers-reduced-motion: no-preference) {
   .App-logo {
     animation: App-logo-spin infinite 20s linear;
