--- a/client/src/components/ContactForm/style.css
+++ b/client/src/components/ContactForm/style.css
@@ -6,7 +6,7 @@
   width: 74%;
 }
 .CF1 {
-  background-color: #f29559;
+  background-color: #b8b08d;
 }
 
 .CF2 {
