--- a/client/src/components/DeveloperMallList/style.css
+++ b/client/src/components/DeveloperMallList/style.css
@@ -11,12 +11,13 @@
   height: 100%;
   width: 20%;
   position: fixed;
-  top: 0;
+  top:  5%;
   left: 0;
   background-color: var(--developer5);
   overflow-x: hidden;
   padding: 10px;
   margin-left: 0%;
+  margin-top: 50px;
 }
 
 .sidenav a {
@@ -29,10 +30,6 @@
 
 .sidenav a:hover {
   color: #f1f1f1;
-}
-
-.mall-list-title {
-  margin-top: 50px;
 }
 
 .dev-mall-list-item {
@@ -79,14 +76,11 @@
 
 .my-5 {
   margin-top: 0px !important;
-  z-index: -1;
+
 }
 
 
 @media (max-width: 768px) {
-  .mall-list-title {
-    margin-top: 110px;
-  }
   .marginLeft {
     margin-left: -30%;
   }
@@ -104,6 +98,9 @@
   ::marker{
     color: var(--developer5);
   }
+  .sidenav {
+    top:11%;
+  }
   }
 
   @media (max-width: 600px) {
@@ -116,41 +113,34 @@
     }
     .dev-mall-list-item-descrip {
      margin-left: -45%;
-  
+    }
+    .sidenav {
+      top:12%;
     }
 
     }
 
     @media (max-width: 515px) {
-      .mall-list-title {
-        margin-top: 160px;
-      }
       .marginLeft {
-        margin-left: -59%;
+        margin-left: -45%;
         margin-right: 1%;
       }
       .dev-mall-list-item {
         width: 100%;
       }
       .dev-mall-list-item-descrip {
-       margin-left: -55%;
-    
+       margin-left: -45%;
+      }
+      .sidenav {
+        top:17.5%;
+        width: 30%;
+        margin-right: 1%;
       }
   
       }
 
-      @media (max-width: 400px) {
 
-        .marginLeft {
-          margin-left: -80%;
-          margin-right: -1%;
-        }
-        .dev-mall-list-item {
-          width: 100%;
-        }
-        .dev-mall-list-item-descrip {
-         margin-left: -80%;
-      
-        }
+
+
+
     
-        }
