--- a/client/src/components/DeveloperStoreList/style.css
+++ b/client/src/components/DeveloperStoreList/style.css
@@ -5,6 +5,7 @@
   --developer4: #f2d492;
   --developer5: #f29559;
   --white: #ffffff;
+  z-index: -2;
 }
 
 .center {
@@ -55,4 +56,11 @@
   background-color: var(--developer4);
   color: var(--developer2);
   outline: solid;
+}
+
+@media (max-width: 515px) {
+.center{
+  width: 85%;
+  margin-left: 15%
+}
 }
